--- a/src/layout/partials/footer.html
+++ b/src/layout/partials/footer.html
@@ -11,7 +11,7 @@
         <!-- /.footer__logo -->
 
         <div class="row">
-          <div class="col-5">
+          <div class="col-12 col-lg-5">
             <div class="footer__nav">
               <div class="footer__heading">ЧАСТНЫМ КЛИЕНТАМ</div>
 
@@ -47,7 +47,7 @@
           </div>
           <!-- /.col-5 -->
 
-          <div class="offset-1 col-6">
+          <div class="col-12 offset-lg-1 col-lg-6">
             <div class="footer__callback">
               <div class="footer__heading">По вопросам сотрудничества:</div>
 
@@ -102,7 +102,7 @@
             Официальный сайт компании ФабрикантЪ Стеклопакеты.
           </div>
 
-          <div class="footer__offer">
+          <div class="footer__offer mb-3 mb-lg-0">
             Информация на данном сайте не является публичной офертой и носит
             <br>
             исключительно информационный характер
