--- a/src/layout/partials/header.html
+++ b/src/layout/partials/header.html
@@ -110,5 +110,5 @@
     </div>
     <!-- /.header__nav -->
 
-    <!-- @@include('layout/partials/mobile-menu.html') -->
+    @@include('layout/partials/mobile-menu.html')
   </header>
