--- a/src/scss/base/_helpers.scss
+++ b/src/scss/base/_helpers.scss
@@ -17,3 +17,15 @@
     }
   }
 }
+
+.row {
+  @include breakpoint($breakpoint-tablet) {
+    margin-right: -6px !important;
+    margin-left: -6px !important;
+
+    & > * {
+      padding-right: 6px !important;
+      padding-left: 6px !important;
+    }
+  }
+}
