--- a/src/scss/layout/partials/block/_advantage.scss
+++ b/src/scss/layout/partials/block/_advantage.scss
@@ -1,4 +1,9 @@
 .block-advantage {
+  @include breakpoint($breakpoint-tablet) {
+    padding-left: 28px;
+    font-size: 12px;
+  }
+
   position: relative;
 
   display: flex;
@@ -29,6 +34,10 @@
     font-weight: $weight-Bold;
 
     span {
+      @include breakpoint($breakpoint-tablet) {
+        font-size: $font-size__text--big;
+      }
+
       font-size: $font-size__text--large + 4px;
     }
   }
