--- a/src/scss/layout/common/_footer.scss
+++ b/src/scss/layout/common/_footer.scss
@@ -3,6 +3,10 @@
 // -----------------------------------------------------------------------------
 
 #footer {
+  @include breakpoint($breakpoint-tablet) {
+    margin-top: 70px;
+  }
+
   margin-top: 130px;
   color: $color-text__white;
 
@@ -20,6 +24,11 @@
   }
 
   &__heading {
+    @include breakpoint($breakpoint-tablet) {
+      margin-bottom: 24px;
+      text-transform: uppercase;
+    }
+
     margin-bottom: 32px;
   }
 
@@ -32,6 +41,10 @@
   }
 
   &__contact {
+    @include breakpoint($breakpoint-tablet) {
+      display: none;
+    }
+
     display: flex;
     flex-direction: column;
 
@@ -46,6 +59,14 @@
   }
 
   &__about {
+    @include breakpoint($breakpoint-tablet) {
+      flex-direction: column-reverse;
+
+      br {
+        display: none;
+      }
+    }
+
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
@@ -59,6 +80,10 @@
       align-items: center;
 
       &:not(:last-child) {
+        @include breakpoint($breakpoint-tablet) {
+          margin-bottom: 12px;
+        }
+
         margin-bottom: 20px;
       }
     }
