--- a/src/scss/layout/common/_header.scss
+++ b/src/scss/layout/common/_header.scss
@@ -24,6 +24,10 @@
   }
 
   &__wrapper {
+    @include breakpoint($breakpoint-tablet) {
+      padding: 0 10px;
+    }
+
     display: flex;
     align-items: center;
     padding: 0 45px;
@@ -31,6 +35,7 @@
 
   &__content {
     @include breakpoint($breakpoint-tablet--large) {
+      height: auto;
       padding: 18px 8px;
 
       border-bottom: 4px solid $palette-blue;
