--- a/src/scss/layout/common/_mobile.scss
+++ b/src/scss/layout/common/_mobile.scss
@@ -1,59 +1,49 @@
 .mobile-menu {
-  position: fixed;
-  z-index: 40;
-  top: 0;
-  right: 0;
-  bottom: 0;
+  position: absolute;
+  z-index: 2;
+  top: 100%;
   left: 0;
 
-  height: 100vh;
+  width: 100%;
 
   visibility: hidden;
 
   &__overlay {
+    position: absolute;
+    z-index: 1;
     width: 100%;
-    height: 100%;
+    height: 100vh;
 
-    background-color: rgba($color: #000000, $alpha: 0.5);
+    background-color: rgba($color: #000000, $alpha: 0.75);
     opacity: 0;
     visibility: hidden;
 
     transition: 0.3s ease;
   }
 
-  &__wrapper {
+  &__container {
     position: absolute;
-    top: -100%;
-    left: 0;
-
+    z-index: 2;
     overflow: auto;
 
     width: 100%;
-    height: 100%;
-    max-height: 530px;
-
-    padding: 100px 30px 40px;
 
     background-color: #ffffff;
 
-    transition: 0.5s ease-out;
-  }
-
-  &__button {
-    display: block;
-    margin: 30px auto 0;
+    transform: translateY(-100%);
+    transition: 0.3s ease-out;
   }
 
   &--open {
     visibility: visible;
 
+    .mobile-menu__container {
+      transform: translateY(0);
+    }
+
     .mobile-menu__overlay {
       opacity: 1;
       visibility: visible;
-    }
-
-    .mobile-menu__wrapper {
-      top: 0;
     }
   }
 }
