feat: доработки и правки

--- a/src/layout/index.html
+++ b/src/layout/index.html
@@ -196,6 +196,7 @@
           <div class="manufacturing__wrapper">
             <img class="manufacturing__preview" src="img/layout/page/index/manufacturing/laptop.png" alt="">
             <img class="manufacturing__play" src="img/icons/control/play.svg" alt="">
+            <a class="stretched-link" href=""></a>
           </div>
           <!-- /.manufaturing__videowrapper -->
 
