--- a/src/scss/layout/partials/block/_advantage.scss
+++ b/src/scss/layout/partials/block/_advantage.scss
@@ -43,6 +43,10 @@
   }
 
   img {
+    @include breakpoint($breakpoint-tablet) {
+      left: -50px;
+    }
+
     position: absolute;
     top: 0;
     left: -40px;
