--- a/src/scss/layout/page/index/_about.scss
+++ b/src/scss/layout/page/index/_about.scss
@@ -6,7 +6,7 @@
   position: relative;
   overflow: hidden;
 
-  padding: 205px 0;
+  padding: 160px 0;
   background: linear-gradient(
     180deg,
     #07628f 3%,
@@ -57,7 +57,7 @@
     position: relative;
 
     font-weight: $weight-Bold;
-    font-size: 54px;
+    font-size: $font-size__title--medium;
 
     line-height: 1;
 
@@ -67,7 +67,7 @@
       }
 
       font-weight: $weight-ExtraBold;
-      font-size: 86px;
+      font-size: 64px;
     }
   }
 
@@ -79,8 +79,8 @@
       transform: none;
     }
 
-    margin-left: 60px;
-    font-size: $font-size__title--small;
+    margin-left: 75px;
+    font-size: $font-size__text--large + 4px;
 
     transform: translateY(60px);
   }
@@ -96,8 +96,8 @@
     top: 55%;
     left: 45%;
 
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
 
     transform: translate(-50%, -50%);
 
