--- a/src/scss/layout/page/index/_catalog.scss
+++ b/src/scss/layout/page/index/_catalog.scss
@@ -3,6 +3,12 @@
 }
 
 .catalog {
+  @include breakpoint($breakpoint-tablet) {
+    padding-top: 0;
+  }
+
+  padding-top: 40px;
+
   &__background {
     position: absolute;
     z-index: -1;
