--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -7,6 +7,7 @@
 @include font-face("Montserrat", "../fonts/Montserrat/Montserrat-Bold", 700);
 
 @include font-face("NotoSans", "../fonts/NotoSans/NotoSans-Regular", 400);
+@include font-face("NotoSans", "../fonts/NotoSans/NotoSans-Medium", 500);
 @include font-face("NotoSans", "../fonts/NotoSans/NotoSans-SemiBold", 600);
 @include font-face("NotoSans", "../fonts/NotoSans/NotoSans-Bold", 700);
 @include font-face("NotoSans", "../fonts/NotoSans/NotoSans-ExtraBold", 800);
