--- a/src/scss/layout/common/_footer.scss
+++ b/src/scss/layout/common/_footer.scss
@@ -61,6 +61,7 @@
   &__about {
     @include breakpoint($breakpoint-tablet) {
       flex-direction: column-reverse;
+      color: $color-text__gray;
 
       br {
         display: none;
