--- a/src/layout/partials/footer.html
+++ b/src/layout/partials/footer.html
@@ -127,6 +127,7 @@
 <script src="scripts/base.js"></script>
 <script src="scripts/init.js"></script>
 <script src="scripts/header.js"></script>
+<script src="scripts/slider.js"></script>
 <!-- endbuild -->
 </body>
 
