feat: верстка страницы и записи "статья"

--- a/src/scss/base/_helpers.scss
+++ b/src/scss/base/_helpers.scss
@@ -2,6 +2,10 @@
 // В этом файле содержатся дополнительные или общие классы
 // -----------------------------------------------------------------------------
 
+.position-sticky {
+  top: calc(var(--header-offset) * -1);
+}
+
 .disable-scroll {
   overflow: hidden;
 }
