--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -11,5 +11,8 @@
 // Фрагменты страниц
 @import "page/main";
 
+// Фрагменты записей
+@import "single/main";
+
 // Фрагменты шаблонов
 @import "template/main";
