--- a/src/scss/layout/partials/block/_advantage.scss
+++ b/src/scss/layout/partials/block/_advantage.scss
@@ -12,7 +12,7 @@
 
   padding: 5px 24px 8px 40px;
 
-  border-radius: 10px;
+  border-radius: $border-radius;
   background: linear-gradient(
     266deg,
     #ffffff -3.52%,
