--- a/src/scss/layout/template/card/_portfolio.scss
+++ b/src/scss/layout/template/card/_portfolio.scss
@@ -19,7 +19,7 @@
     width: 100%;
 
     margin-bottom: 16px;
-    border-radius: 10px;
+    border-radius: $border-radius;
 
     aspect-ratio: 5 / 4;
   }
