feat: исправления по статьям, обновление ядра

--- a/src/layout/single-article.html
+++ b/src/layout/single-article.html
@@ -34,7 +34,10 @@
         <div class="row">
           <div class="col-12 col-md-8">
             <div data-editor="default" class="article__content">
-              <img src="img/layout/single/article/1.jpg" alt="">
+              <figure>
+                <img src="img/layout/single/article/1.jpg" alt="">
+                <figcaption>Закалённое стекло</figcaption>
+              </figure>
               <br>
               <p>
                 Формула стеклопакета отображает его конструктивные особенности. Символы обозначают характеристики стекол, дистанционных рамок и газовой смеси, заполняющей камеры.
@@ -49,6 +52,7 @@
               <h2>Классификация стеклопакетов по количеству камер и их обозначения (аббревиатуры)</h2>
               <br>
               <p>Формульная запись может начинаться с аббревиатуры, обозначающей количество камер. Если в начале стоит СПО — это означает, что стеклопакет имеет одну камеру. Формулы двухкамерных стеклопакетов начинаются с аббревиатуры СПД. Здесь СП — сокращение «стеклопакета», а О и Д — соответственно, «однокамерный» или «двухкамерный».</p>
+              <br>
               <br>
               <br>
               <br>
