--- a/src/scss/core/bootstrap/_variables.scss
+++ b/src/scss/core/bootstrap/_variables.scss
@@ -119,7 +119,7 @@ $gutters: $spacers !default;
 
 // Container padding
 
-$container-padding-x: $grid-gutter-width * 0.5 !default;
+$container-padding-x: $grid-gutter-width !default;
 
 // Components
 //
