--- a/src/scss/components/editor/_editor.scss
+++ b/src/scss/components/editor/_editor.scss
@@ -9,7 +9,16 @@
 
   img {
     width: 100%;
+    height: 100%;
     border-radius: $border-radius;
+  }
+
+  figcaption {
+    display: block;
+    margin-top: 8px;
+
+    font-weight: $weight-Medium;
+    font-size: $font-size__text--small - 2px;
   }
 
   a {
