--- a/src/scss/layout/page/blog-page/_blog.scss
+++ b/src/scss/layout/page/blog-page/_blog.scss
@@ -1,11 +1,40 @@
 #blog {
-  background-color: $palette-lightgray;
+  @include breakpoint($breakpoint-tablet) {
+    background-color: #ededed;
+
+    &::after {
+      content: "";
+      position: absolute;
+      z-index: 1;
+      top: 0;
+      left: 0;
+
+      width: 100%;
+      height: 110px;
+      background-color: $palette-white;
+    }
+  }
+
+  position: relative;
+
+  .container {
+    position: relative;
+    z-index: 2;
+  }
 }
 
 .blog {
+  @include breakpoint($breakpoint-tablet) {
+    padding-bottom: 36px;
+  }
+
   position: relative;
 
   .row {
+    @include breakpoint($breakpoint-tablet) {
+      margin-bottom: -32px;
+    }
+
     margin-bottom: -64px;
 
     & > div {
